Style : Fix Shimmer gap issue

--- a/src/components/loader/productCardShimmer.scss
+++ b/src/components/loader/productCardShimmer.scss
@@ -1,6 +1,5 @@
 .shimmer-loader {
-  width: 100%;
-  max-width: 400px;
+  width: 92%;
   padding: 16px;
   background-color: #fff;
   border-radius: 8px;
